Pro 1.2.0
=========

Fixes:

 - Fixed: Support building Designer using JDK 7 (MODELER-546)
 - Fixed: Delete key only deletes the last object in a multiple selection (MODELER-441)
 
Pro 1.1.0
=========

Fixes:
 - Fixed: On session timeout, URL redirection is incorrect (MODELER-539)
 - Fixed: Could not import configuration back, NPE (MODELER-525)

New features:
 - Use XML as persistence format for UI configuration instead of Java serialization (MODELER-450)
 - Have an export/import functionality for a user configuration (MODELER-390)

Pro 1.0.17
==========

Fixes:
 - Fixed: Orange selection indicator around grid not correctly sized (MODELER-356)
 - Fixed: Widgets shift by 1 pixel when being selected (MODELER-420)
 - Fixed: Images linked to only to sensor state values are not included
   as part of the exported openremote.zip file (MODELER-555)

New features:
 - Update Domintell protocol to support ISM modules (MODELER-554)
 - Have mechanism to limit protocol access to specific accounts (MODELER-550)

Pro 1.0.16
==========

Fixes:
 - Push code from Controller to Service layer (MODELER-443)
 - Fixed: Text centering in a label is not triggered by changes in size or text (MODELER-400)
 - Fixed: Cannot unset username and/or password of web view widget (MODELER-542)
 - Fixed: Panel.xml not correcty generated for widgets with switch sensors (MODELER-552)

Pro 1.0.15
==========

Fixes:
 - Fixed: Panel.xml not correcty generated for widgets with custom sensors (MODELER-551)

Pro 1.0.14
==========

Fixes:
 - ResourceServiceImpl.initResources Should Be Internalized as Part of LocalFileCache Implementation (MODELER-287)
 - Rework populate / resolve DTO references (MODELER-452)
 - Fixed: Controller and panel XML files incorrectly generated after MODELER-452 changes (MODELER-480)
 - Fixed: Display errors in device tree, commands not appearing in sensor or switch details (MODELER-500)